--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     </div>
                 </div>
             </div>
-
+            
             <div class="card">
                 <div class="card-content flex items-start">
                     <div class="icon-wrapper bg-emerald-600">
@@ -152,6 +152,31 @@
                     </div>
                 </div>
             </div>
+
+            <div class="card">
+                <div class="card-content flex items-start">
+                    <div class="icon-wrapper bg-sky-600">
+                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M11.25 11.25l.041-.02a.75.75 0 011.063.852l-.708 2.836a.75.75 0 001.063.852l.041-.021M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-9-3.75h.008v.008H12V8.25z"></path></svg>
+                    </div>
+                    <div>
+                        <h2 class="text-2xl font-bold mb-4 text-sky-800">심화 이해: 매튜 헨리 주석</h2>
+                        <p class="mb-4">매튜 헨리는 본문을 통해 성도의 삶이 어떻게 실제적으로 하나님을 기쁘시게 할 수 있는지에 대한 깊이 있는 통찰을 제공합니다.</p>
+                        <dl class="def-list">
+                            <dt>
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M5 2a1 1 0 011 1v1h8V3a1 1 0 112 0v1h1a2 2 0 012 2v10a2 2 0 01-2 2H3a2 2 0 01-2-2V6a2 2 0 012-2h1V3a1 1 0 011-1zm10 8H5v6h10v-6z" clip-rule="evenodd" /></svg>
+                                성화(Sanctification)의 필연성
+                            </dt>
+                            <dd>헨리는 <span class="keyword">성화</span>가 단순히 하나님의 바람이 아니라, 우리를 향한 그분의 '뜻'이자 '명령'임을 강조합니다. 성도는 자신의 몸을 단순한 욕망의 도구가 아닌, 하나님의 성령이 거하시는 '그릇'으로 인식하고 '거룩함과 존귀함'으로 다뤄야 합니다. 이는 죄를 피하는 소극적 차원을 넘어, 몸을 하나님께 영광 돌리는 적극적인 도구로 사용하는 것을 의미합니다. 거룩의 명령을 저버리는 것은 곧 우리 안에 성화를 이루시는 <span class="keyword">성령 하나님</span>을 거부하는 행위입니다.</dd>
+                            <dt>
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor"><path d="M2 10.5a1.5 1.5 0 113 0v6a1.5 1.5 0 01-3 0v-6zM6 10.333v5.43a2 2 0 001.106 1.79l.05.025A4 4 0 008.943 18h2.114a4 4 0 002.789-.952l.05-.025a2 2 0 001.106-1.79v-5.43a2 2 0 00-1.106-1.79l-.05-.025a4 4 0 00-2.789-.952H8.943a4 4 0 00-2.789.952l-.05.025a2 2 0 00-1.106 1.79zM18 10.5a1.5 1.5 0 11-3 0v6a1.5 1.5 0 013 0v-6z" /></svg>
+                                사랑과 노동의 사회적 책임
+                            </dt>
+                            <dd>헨리는 '조용히 자기 일을 하고 손으로 일하는 것'을 <span class="keyword">형제 사랑</span>과 <span class="keyword">사회적 증거</span>의 관점에서 해석합니다. 성실한 노동은 게으름으로 형제에게 짐이 되는 것을 막는 사랑의 실천입니다. 동시에, 이는 믿지 않는 '외인들'에게 기독교인의 정직함과 성실함을 보여주는 가장 강력한 전도 방법 중 하나입니다. 성도의 단정한 삶은 그 자체로 복음의 신뢰성을 높이고, 그들이 아무것도 '궁핍하지 않게' 되는 것은 하나님의 신실하심을 증명하는 결과가 됩니다.</dd>
+                        </dl>
+                    </div>
+                </div>
+            </div>
+
         </main>
     </div>
     <div id="hidden-player-container"></div>
